@@ -1,13 +1,17 @@
+import java.io.BufferedInputStream;
+import java.io.BufferedReader;
+import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Scanner;
 
+@SuppressWarnings("deprecation")
 public class CrossProdAssetExportUtility {
 
     // Global variables for server URL and session ID
@@ -55,38 +59,49 @@ public class CrossProdAssetExportUtility {
 
     public static void sendLoginRequest(String regionUrl, String jsonPayload, Scanner scanner) {
         try {
-            // Build the POST request with the region URL
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create("https://" + regionUrl + "/ma/api/v2/user/login"))
-                    .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(jsonPayload))
-                    .build();
+            // Build the URL for the POST request
+            URL url = new URL("https://" + regionUrl + "/ma/api/v2/user/login");
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
-            // Send the request and get the response
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            // Set request method to POST
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setDoOutput(true);
 
-            // Status message for response handling
+            // Send the JSON payload
+            try (OutputStream os = connection.getOutputStream()) {
+                byte[] input = jsonPayload.getBytes("utf-8");
+                os.write(input, 0, input.length);
+            }
+
+            // Read the response
+            int responseCode = connection.getResponseCode();
             System.out.println("Processing response...");
 
-            // Check if the response code is not 200
-            if (response.statusCode() != 200) {
-                throw new RuntimeException("Failed to log in. HTTP Error Code: " + response.statusCode());
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                throw new RuntimeException("Failed to log in. HTTP Error Code: " + responseCode);
+            }
+
+            // Get response body
+            StringBuilder responseBody = new StringBuilder();
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"))) {
+                String responseLine;
+                while ((responseLine = br.readLine()) != null) {
+                    responseBody.append(responseLine.trim());
+                }
             }
 
             // Manually parse the JSON response as a String
-            String responseBody = response.body();
+            String response = responseBody.toString();
 
             // Extract serverUrl
-            serverUrl = extractValue(responseBody, "serverUrl");
+            serverUrl = extractValue(response, "serverUrl");
 
             // Extract icSessionId
-            icSessionId = extractValue(responseBody, "icSessionId");
+            icSessionId = extractValue(response, "icSessionId");
 
-            // Status message for getting server URL
+            // Status messages
             System.out.println("Getting server URL: " + serverUrl);
-
-            // Status message for generating session ID
             System.out.println("Generating Session ID: " + icSessionId);
 
             // Final status message
@@ -99,7 +114,7 @@ public class CrossProdAssetExportUtility {
             handleImportToProdOrg(scanner);
 
         } catch (Exception e) {
-            // Error handling status
+            // Error handling
             System.out.println("An error occurred: " + e.getMessage());
             e.printStackTrace();
         }
@@ -145,63 +160,101 @@ public class CrossProdAssetExportUtility {
 
     // Method to download the export package as a zip file
     public static void downloadExportPackage(String exportId) {
+        HttpURLConnection connection = null;
+        BufferedInputStream in = null;
+        FileOutputStream fileOutputStream = null;
+
         try {
-            // Build the GET request to download the export package
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(serverUrl + "/public/core/v3/export/" + exportId + "/package"))
-                    .header("INFA-SESSION-ID", icSessionId)
-                    .GET()
-                    .build();
+            // Build the URL for the GET request
+            URL url = new URL(serverUrl + "/public/core/v3/export/" + exportId + "/package");
+            connection = (HttpURLConnection) url.openConnection();
+            
+            // Set request method to GET
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("INFA-SESSION-ID", icSessionId);
+            connection.setDoInput(true);
 
-            // Send the request and get the response
-            HttpResponse<byte[]> response = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
+            // Send the request
+            connection.connect();
 
-            // Status message for response handling
+            // Check if the response code is 200
+            int responseCode = connection.getResponseCode();
             System.out.println("Downloading export package...");
-
-            // Check if the response code is not 200
-            if (response.statusCode() != 200) {
-                throw new RuntimeException(
-                        "Failed to download export package. HTTP Error Code: " + response.statusCode());
+            
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                throw new RuntimeException("Failed to download export package. HTTP Error Code: " + responseCode);
             }
 
-            // Save the ZIP file
+            // Read the response as a byte stream
+            in = new BufferedInputStream(connection.getInputStream());
             java.nio.file.Path path = java.nio.file.Paths.get("export_package.zip");
-            java.nio.file.Files.write(path, response.body());
+            fileOutputStream = new FileOutputStream(path.toFile());
+
+            byte[] buffer = new byte[1024];
+            int bytesRead;
+            while ((bytesRead = in.read(buffer)) != -1) {
+                fileOutputStream.write(buffer, 0, bytesRead);
+            }
+
             System.out.println("Export package downloaded successfully as 'export_package.zip'.");
 
-        } catch (Exception e) {
+        } catch (IOException e) {
             // Error handling status
             System.out.println("An error occurred while downloading the export package: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (in != null) in.close();
+                if (fileOutputStream != null) fileOutputStream.close();
+            } catch (IOException e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     // Method to check export status by calling
-    // <serverUrl>/public/core/v3/export/<id>
+    @SuppressWarnings("resource")
     public static void checkExportStatus(String exportId, Scanner scanner) {
-        try {
-            // Build the GET request to check the export status
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(serverUrl + "/public/core/v3/export/" + exportId))
-                    .header("INFA-SESSION-ID", icSessionId)
-                    .GET()
-                    .build();
+        HttpURLConnection connection = null;
+        BufferedReader reader = null;
 
-            // Status message for response handling
+        try {
+            // Build the URL for the GET request
+            URL url = new URL(serverUrl + "/public/core/v3/export/" + exportId);
+            connection = (HttpURLConnection) url.openConnection();
+            
+            // Set request method to GET
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("INFA-SESSION-ID", icSessionId);
+            connection.setDoInput(true);
+
             System.out.println("Checking export status...");
 
-            // Continuously check the export status until it's "successful"
             while (true) {
-                // Send the request and get the response
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+                // Send the request
+                connection.connect();
+
+                // Get response code
+                int responseCode = connection.getResponseCode();
+                
+                if (responseCode != HttpURLConnection.HTTP_OK) {
+                    throw new RuntimeException("Failed to check export status. HTTP Error Code: " + responseCode);
+                }
+
+                // Read the response
+                reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                StringBuilder responseBody = new StringBuilder();
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    responseBody.append(line);
+                }
 
                 // Extract the status from the response
-                String responseBody = response.body();
-                String status = extractValue(responseBody, "status");
-                String state = extractValue(responseBody, "state");
+                String responseStr = responseBody.toString();
+                String status = extractValue(responseStr, "status");
+                String state = extractValue(responseStr, "state");
 
                 if ("SUCCESSFUL".equalsIgnoreCase(state)) {
                     System.out.println("Export successful!");
@@ -222,44 +275,75 @@ public class CrossProdAssetExportUtility {
             // Error handling status
             System.out.println("An error occurred while checking export status: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (reader != null) reader.close();
+            } catch (Exception e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     // Method to send the export request to Informatica Cloud
     public static void sendExportRequest(String jsonPayload, Scanner scanner) {
+        HttpURLConnection connection = null;
+        BufferedReader reader = null;
+        OutputStream outputStream = null;
+
         try {
-            // Build the POST request for exporting the asset
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(serverUrl + "/public/core/v3/export"))
-                    .header("Content-Type", "application/json")
-                    .header("INFA-SESSION-ID", icSessionId)
-                    .POST(HttpRequest.BodyPublishers.ofString(jsonPayload))
-                    .build();
+            // Build the URL for the POST request
+            URL url = new URL(serverUrl + "/public/core/v3/export");
+            connection = (HttpURLConnection) url.openConnection();
+            
+            // Set request method to POST
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setRequestProperty("INFA-SESSION-ID", icSessionId);
+            connection.setDoOutput(true);
 
-            // Send the request and get the response
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            // Send the JSON payload
+            outputStream = connection.getOutputStream();
+            byte[] input = jsonPayload.getBytes("utf-8");
+            outputStream.write(input, 0, input.length);
 
-            // Status message for response handling
+            // Read the response
+            int responseCode = connection.getResponseCode();
             System.out.println("Processing export response...");
 
-            // Check if the response code is not 200
-            if (response.statusCode() != 200) {
-                throw new RuntimeException("Failed to start export. HTTP Error Code: " + response.statusCode());
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                throw new RuntimeException("Failed to start export. HTTP Error Code: " + responseCode);
+            }
+
+            reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+            StringBuilder responseBody = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                responseBody.append(line);
             }
 
             // Extract the export ID from the response
-            String responseBody = response.body();
-            String exportId = extractValue(responseBody, "id");
+            String responseStr = responseBody.toString();
+            String exportId = extractValue(responseStr, "id");
             System.out.println("Export started successfully. Export ID: " + exportId);
 
             // Check the export status
             checkExportStatus(exportId, scanner);
 
         } catch (Exception e) {
-            // Error handling status
+            // Error handling
             System.out.println("An error occurred during export: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (outputStream != null) outputStream.close();
+                if (reader != null) reader.close();
+            } catch (Exception e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
@@ -291,35 +375,68 @@ public class CrossProdAssetExportUtility {
 
     // Method to log in to the production org
     public static void sendProdLoginRequest(String regionUrl, String jsonPayload, Scanner scanner) {
+        HttpURLConnection connection = null;
+        BufferedReader reader = null;
+        OutputStream outputStream = null;
+
         try {
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create("https://" + regionUrl + "/ma/api/v2/user/login"))
-                    .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(jsonPayload))
-                    .build();
+            // Build the URL for the POST request
+            URL url = new URL("https://" + regionUrl + "/ma/api/v2/user/login");
+            connection = (HttpURLConnection) url.openConnection();
+            
+            // Set request method to POST
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setDoOutput(true);
 
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            // Send the JSON payload
+            outputStream = connection.getOutputStream();
+            byte[] input = jsonPayload.getBytes("utf-8");
+            outputStream.write(input, 0, input.length);
 
-            if (response.statusCode() != 200) {
+            // Read the response
+            int responseCode = connection.getResponseCode();
+
+            if (responseCode != HttpURLConnection.HTTP_OK) {
                 throw new RuntimeException(
-                        "Failed to log in to production org. HTTP Error Code: " + response.statusCode());
+                        "Failed to log in to production org. HTTP Error Code: " + responseCode);
             }
 
-            String responseBody = response.body();
-            prodServerUrl = extractValue(responseBody, "serverUrl");
-            prodIcSessionId = extractValue(responseBody, "icSessionId");
+            reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+            StringBuilder responseBody = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                responseBody.append(line);
+            }
+
+            // Extract serverUrl and icSessionId from the response
+            String responseStr = responseBody.toString();
+            prodServerUrl = extractValue(responseStr, "serverUrl");
+            prodIcSessionId = extractValue(responseStr, "icSessionId");
 
             System.out.println("Logged in to production org successfully.");
 
         } catch (Exception e) {
             System.out.println("An error occurred during production login: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (outputStream != null) outputStream.close();
+                if (reader != null) reader.close();
+            } catch (Exception e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     // Method to upload the exported package to the production org
     public static void uploadExportedPackageToProd(Scanner scanner) {
+        HttpURLConnection connection = null;
+        OutputStream outputStream = null;
+        BufferedReader reader = null;
+
         try {
             // Path to the exported package file on local machine
             Path packagePath = Paths.get("export_package.zip");
@@ -344,14 +461,14 @@ public class CrossProdAssetExportUtility {
             bodyBuilder.append("Content-Type: application/zip\r\n\r\n");
 
             // Convert the header part to bytes
-            byte[] bodyBytes = bodyBuilder.toString().getBytes();
+            byte[] bodyBytes = bodyBuilder.toString().getBytes("utf-8");
 
             // Read the file content as bytes
             byte[] fileBytes = Files.readAllBytes(packagePath);
 
             // Add the closing boundary
             String endBoundary = "\r\n--" + boundary + "--\r\n";
-            byte[] endBoundaryBytes = endBoundary.getBytes();
+            byte[] endBoundaryBytes = endBoundary.getBytes("utf-8");
 
             // Create the final byte array with the correct size
             byte[] finalBody = new byte[bodyBytes.length + fileBytes.length + endBoundaryBytes.length];
@@ -363,135 +480,224 @@ public class CrossProdAssetExportUtility {
                     endBoundaryBytes.length);
 
             // Build the HTTP request
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(prodServerUrl + "/public/core/v3/import/package"))
-                    .header("INFA-SESSION-ID", prodIcSessionId)
-                    .header("Content-Type", "multipart/form-data; boundary=" + boundary)
-                    .POST(HttpRequest.BodyPublishers.ofByteArray(finalBody))
-                    .build();
+            URL url = new URL(prodServerUrl + "/public/core/v3/import/package");
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("INFA-SESSION-ID", prodIcSessionId);
+            connection.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
+            connection.setDoOutput(true);
 
-            // Send the HTTP request
-            HttpClient client = HttpClient.newHttpClient();
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            // Send the request body
+            outputStream = connection.getOutputStream();
+            outputStream.write(finalBody);
+            outputStream.flush();
 
-            // Check the response status
-            if (response.statusCode() != 200) {
-                System.out.println("HTTP Error: " + response.statusCode());
-                System.out.println("Response Body: " + response.body());
-                throw new RuntimeException("Failed to upload the package. HTTP Error Code: " + response.statusCode()
-                        + ". Response Body: " + response.body());
+            // Read the response
+            int responseCode = connection.getResponseCode();
+            System.out.println("HTTP Response Code: " + responseCode);
+
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                reader = new BufferedReader(new InputStreamReader(connection.getErrorStream(), "utf-8"));
+                StringBuilder responseBody = new StringBuilder();
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    responseBody.append(line);
+                }
+                throw new RuntimeException("Failed to upload the package. HTTP Error Code: " + responseCode
+                        + ". Response Body: " + responseBody.toString());
+            }
+
+            reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+            StringBuilder responseBody = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                responseBody.append(line);
             }
 
             // Parse the response for the import job ID
-            String responseBody = response.body();
-            String importJobId = extractValue(responseBody, "jobId");
+            String responseStr = responseBody.toString();
+            String importJobId = extractValue(responseStr, "jobId");
             System.out.println("Package uploaded successfully. Import Job ID: " + importJobId);
 
             // Check the import status
             startUploadJob(importJobId, prodIcSessionId, scanner);
 
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             System.out.println("An error occurred during package upload: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (outputStream != null) outputStream.close();
+                if (reader != null) reader.close();
+            } catch (IOException e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     // Method to start the upload job
     public static void startUploadJob(String jobId, String sessionId, Scanner scanner) {
+        HttpURLConnection connection = null;
+        BufferedReader reader = null;
+
         try {
             // Construct the URL for the import job start API
             String url = prodServerUrl + "/public/core/v3/import/" + jobId;
             System.out.println("Starting import job at URL: " + url);
 
             // Create the HTTP request
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .header("INFA-SESSION-ID", sessionId)
-                    .header("Content-Type", "application/json") // Content-Type header as per your cURL command
-                    .POST(HttpRequest.BodyPublishers.noBody()) // Empty POST body
-                    .build();
+            URL requestUrl = new URL(url);
+            connection = (HttpURLConnection) requestUrl.openConnection();
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("INFA-SESSION-ID", sessionId);
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setDoOutput(true); // Indicates that this is a POST request
 
             // Send the HTTP request
-            HttpClient client = HttpClient.newHttpClient();
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            int responseCode = connection.getResponseCode();
+            System.out.println("HTTP Response Code: " + responseCode);
 
             // Check if the request was successful
-            if (response.statusCode() != 200) {
-                System.out.println("HTTP Error: " + response.statusCode());
-                System.out.println("Response Body: " + response.body());
-                throw new RuntimeException("Failed to start the import job. HTTP Error Code: " + response.statusCode());
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                reader = new BufferedReader(new InputStreamReader(connection.getErrorStream(), "utf-8"));
+                StringBuilder responseBody = new StringBuilder();
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    responseBody.append(line);
+                }
+                throw new RuntimeException("Failed to start the import job. HTTP Error Code: " + responseCode
+                        + ". Response Body: " + responseBody.toString());
+            }
+
+            // Read the response
+            reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+            StringBuilder responseBody = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                responseBody.append(line);
             }
 
             // Output success message
             System.out.println("Import job started successfully.");
+            System.out.println("Response: " + responseBody.toString());
 
+            // Proceed to check the import status
             checkImportStatus(jobId, scanner);
 
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             System.out.println("An error occurred while starting the import job: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (reader != null) reader.close();
+            } catch (IOException e) {
+                System.out.println("An error occurred while closing the reader: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     public static void logout(String sessionId, String username, String password) {
+        HttpURLConnection connection = null;
+        OutputStream outputStream = null;
+        BufferedReader reader = null;
+
         try {
             // Logout URL
             String logoutUrl = "https://dm-us.informaticacloud.com/ma/api/v2/user/logout";
 
             // Create the request body
-            String requestBody = "{ \"@type\": \"login\", \"username\": \"" + username + "\", \"password\": \""
-                    + password + "\" }";
+            String requestBody = "{ \"@type\": \"login\", \"username\": \"" + username + "\", \"password\": \"" + password + "\" }";
 
             // Create the HTTP request
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(logoutUrl))
-                    .header("icSessionId", sessionId)
-                    .header("Content-Type", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(requestBody)) // Request body with username and password
-                    .build();
+            URL url = new URL(logoutUrl);
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("icSessionId", sessionId);
+            connection.setRequestProperty("Content-Type", "application/json");
+            connection.setDoOutput(true); // Indicates that this is a POST request
 
-            // Send the HTTP request
-            HttpClient client = HttpClient.newHttpClient();
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            // Send the request body
+            outputStream = connection.getOutputStream();
+            outputStream.write(requestBody.getBytes("UTF-8"));
+            outputStream.flush();
+
+            // Get the response
+            int responseCode = connection.getResponseCode();
+            System.out.println("HTTP Response Code: " + responseCode);
 
             // Check if the request was successful
-            if (response.statusCode() != 200) {
-                System.out.println("Failed to log out. HTTP Error Code: " + response.statusCode());
-                System.out.println("Response Body: " + response.body());
-                throw new RuntimeException("Logout failed for session: " + sessionId);
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                reader = new BufferedReader(new InputStreamReader(connection.getErrorStream(), "utf-8"));
+                StringBuilder responseBody = new StringBuilder();
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    responseBody.append(line);
+                }
+                throw new RuntimeException("Failed to log out. HTTP Error Code: " + responseCode
+                        + ". Response Body: " + responseBody.toString());
+            }
+
+            // Read the successful response
+            reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+            StringBuilder responseBody = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                responseBody.append(line);
             }
 
             // Success
             System.out.println("Successfully logged out session ID: " + sessionId);
+            System.out.println("Response: " + responseBody.toString());
 
-        } catch (IOException | InterruptedException e) {
+        } catch (IOException e) {
             System.out.println("An error occurred during logout: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (outputStream != null) outputStream.close();
+                if (reader != null) reader.close();
+            } catch (IOException e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 
     // Method to check the import status
     public static void checkImportStatus(String importJobId, Scanner scanner) {
+        HttpURLConnection connection = null;
+        BufferedReader reader = null;
+
         try {
             String importStatusUrl = prodServerUrl + "/public/core/v3/import/" + importJobId;
 
             while (true) {
                 // Build the request to check the import status
-                HttpRequest request = HttpRequest.newBuilder()
-                        .uri(URI.create(importStatusUrl))
-                        .header("INFA-SESSION-ID", prodIcSessionId)
-                        .GET()
-                        .build();
+                URL url = new URL(importStatusUrl);
+                connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+                connection.setRequestProperty("INFA-SESSION-ID", prodIcSessionId);
 
                 // Send the request
-                HttpClient client = HttpClient.newHttpClient();
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+                int responseCode = connection.getResponseCode();
+                System.out.println("HTTP Response Code: " + responseCode);
 
-                // Check the response status
-                if (response.statusCode() == 200) {
-                    String responseBody = response.body();
-                    String state = extractValue(responseBody, "state");
-                    // String message = extractValue(responseBody, "message");
+                if (responseCode == HttpURLConnection.HTTP_OK) {
+                    reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), "utf-8"));
+                    StringBuilder responseBody = new StringBuilder();
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        responseBody.append(line);
+                    }
+
+                    // Extract the state from the response
+                    String responseBodyString = responseBody.toString();
+                    String state = extractValue(responseBodyString, "state");
 
                     System.out.println("Import Status: " + state);
 
@@ -509,7 +715,7 @@ public class CrossProdAssetExportUtility {
                     }
 
                 } else {
-                    System.out.println("Failed to check import status. HTTP Error Code: " + response.statusCode());
+                    System.out.println("Failed to check import status. HTTP Error Code: " + responseCode);
                 }
 
                 // Wait for some time before the next status check
@@ -519,6 +725,14 @@ public class CrossProdAssetExportUtility {
         } catch (IOException | InterruptedException e) {
             System.out.println("An error occurred while checking the import status: " + e.getMessage());
             e.printStackTrace();
+        } finally {
+            // Clean up resources
+            try {
+                if (reader != null) reader.close();
+            } catch (IOException e) {
+                System.out.println("An error occurred while closing resources: " + e.getMessage());
+            }
+            if (connection != null) connection.disconnect();
         }
     }
 }
